compiler/testData/diagnostics/tests/annotations/DanglingInScript.kts
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
// FILE: script.kts

annotation class Ann

@Ann<!SYNTAX!><!>